Added fresh news

--- a/news.html
+++ b/news.html
@@ -46,6 +46,8 @@
       <i>20 December 2015</i>5 <br>
       The new version of the website is launched! <br>
       The current website version is powered by Bootstrap, a popular front-end framework. <br>
-      As you might noticed, KatForums is down for a while. this is because of database and user-registration issues.</div>
+      As you might noticed, KatForums is down for a while. this is because of database and user-registration issues.
+      2 January 2016
+      We switched hosts! now we're using GitHub pages</div>
       </body>
       </html>
