Edited blag post #3

--- a/blog.html
+++ b/blog.html
@@ -48,7 +48,8 @@
         <small>Post #3</small><br>
         <span>Category: New year, 2015, Celebration</span>
         <p>0.0 I can't believe it's almost new year! Wow! do you have any plans for new year? <br>
-        I'm going to have a barbeque</p>              <span>--------------------------------------------------------------------------------------------------------------------------------------------------------------------------</span>
+        I'm going to have a barbeque <br>
+Unfortunately, after the BBQ i had a stomach ache... :P</p>              <span>--------------------------------------------------------------------------------------------------------------------------------------------------------------------------</span>
         <h2><b>KatFramework——A Perfect Framework For Your Scratch Projects!</b></h2>
         <small>Post #2</small><br>
         <span>Category: WIP, Scratch, APIs</span>
