--- a/index.html
+++ b/index.html
@@ -56,9 +56,8 @@
   		    <p><center>Hi there! i'm DrKat123. this is my website.<br>
   		     I'm a 10 year old 7th grader who loves coding in HTML, CSS, JS, Python, PHP and Scratch. <br>
   		     Well, I usually compose classical music too. <br></center></p>
-   		    <h1><center><b>What do I do usually</b></center></h1>
-   		    <p><center>I love to code, develop this website, play the piano and the violin. I also love composing classical music. <br>
-   		    I also love exploring new stuffs, and more. <br></center></p>
+   		    <h1><center><b>Webcomic</b></center></h1>
+   		    <p><center>Coming soon<br></center></p>
                		    <br>
    		    <br>
    		    <footer>
